--- a/styles/main.css
+++ b/styles/main.css
@@ -1,9 +1,24 @@
 *{
-    text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-
+body{
+    background-color: blanchedalmond;
+}
+.recipe-list{
+    text-align: center;
+}
+.page-header-text{
+    font-family: "Brush Script MT", cursive, serif;
+    text-align: center;
+}
 ul{
     list-style-type: none;
     padding: 0;
+}
+img{
+    width: 400px;
+    height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
