--- a/styles/index.css
+++ b/styles/index.css
@@ -2,3 +2,10 @@
     width: 600px;
     margin: 0 auto 100px auto;
 }
+
+.site-title-text{
+    text-align: center;
+    font-family: 'Mansalva', cursive, sans-serif;
+    font-size: 61px;
+    margin: 20px 0 50px 0;
+}
