--- a/styles/index.css
+++ b/styles/index.css
@@ -7,5 +7,6 @@
     text-align: center;
     font-family: 'Mansalva', cursive, sans-serif;
     font-size: 61px;
+    font-weight: 400px;
     margin: 20px 0 50px 0;
 }
